Save to file - increment number doesn't update background color of filename field if hovered #37007

Closed
opened 2013-10-09 14:36:25 +02:00 by CodeManX · 3 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7, 64bit; Intel HD 3000

- Blender version with error, and version that worked ---

2.69 RC1 and 2.67, possibly never worked

- Short description of error ---

If you save to file and the current entered filename exists in the target dir already, the background of the filename field is red to indicate that it would overwrite the file. If you use + key to add a number / increment it, and the new filename isn't used for another file in that dir, the background color turns to default gray. However, if mouse cursor is above the filename field, it doesn't change color. It does as soon as you leave it, but not before.

%%%

%%%--- Operating System, Graphics card --- Windows 7, 64bit; Intel HD 3000 - Blender version with error, and version that worked --- 2.69 RC1 and 2.67, possibly never worked - Short description of error --- If you save to file and the current entered filename exists in the target dir already, the background of the filename field is red to indicate that it would overwrite the file. If you use + key to add a number / increment it, and the new filename isn't used for another file in that dir, the background color turns to default gray. However, if mouse cursor is above the filename field, it doesn't change color. It does as soon as you leave it, but not before. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r60630.%%%

%%%fixed r60630.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37007
No description provided.