fix [#37007] Save to file - increment number doesn't update background color of filename field if hovered